--- a/Projects/Mini-projects/Project-5/index.html
+++ b/Projects/Mini-projects/Project-5/index.html
@@ -56,7 +56,7 @@
       let flag=1;
 
 
-      function validateForm(usernmae) {
+      function validateForm(username) {
         if (username.value == "") {
           document.getElementById("userError").innerHTML = "User Name is empty";
           flag = 0;
